--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,12 +5,14 @@
 <html>
     <head>
         <title>@title</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/reset.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
         <script src="//connect.facebook.net/en_US/all.js"></script>
-        <script src="http://code.createjs.com/easeljs-0.6.1.min.js"></script>
-        <script src="http://underscorejs.org/underscore-min.js"></script>
+        <script src="@routes.Assets.at("javascripts/easeljs-0.7.1.min.js")"></script>
+        <script src="@routes.Assets.at("javascripts/underscore-min.js")"></script>
         <script src="@routes.Assets.at("javascripts/circle.js")"></script>
     </head>
     <body>
