--- a/app/views/canvas.scala.html
+++ b/app/views/canvas.scala.html
@@ -47,14 +47,14 @@
 
 		function show_friends(){
 			FB.api('/me/friends', function(response) {
-				console.log(response);
+				// console.log(response);
 				var _friends = response.data;
 				for (i in _friends) {
 					getPicture(_friends[i].id, function(response){
 		                var x = _.random(0, canvas.width - 0);
 		                var y = _.random(0, canvas.height - 0);
 		                var easing = _.random(1, 5) / 500;
-		                console.log(response.data.url);
+		                // console.log(response.data.url);
 		                var circle = new Circle(response.data.url, x, y, easing);
 		                circle.draw(stage);
 		                friends.push(circle);
@@ -93,7 +93,7 @@
             stage = new createjs.Stage(canvas);
             canvas.width = window.innerWidth-20;
 		    canvas.height = window.outerHeight-150;
-			console.log(window);
+			// console.log(window);
 		    stage.addEventListener("stagemousemove", function(evt) {
 		        mouseX = evt.stageX;
 		        mouseY = evt.stageY;
