--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -13,6 +13,7 @@
         <script src="//connect.facebook.net/en_US/all.js"></script>
         <script src="@routes.Assets.at("javascripts/easeljs-0.7.1.min.js")"></script>
         <script src="@routes.Assets.at("javascripts/underscore-min.js")"></script>
+        <script src="@routes.Assets.at("javascripts/async.js")"></script>
         <script src="@routes.Assets.at("javascripts/circle.js")"></script>
     </head>
     <body>
