--- a/app/views/canvas.scala.html
+++ b/app/views/canvas.scala.html
@@ -30,25 +30,20 @@
 			});
 		}
 
-		var canvas, stage, me, mouseX, mouseY, friends=[], max_distance;
+		var canvas, stage, me, mouseX, mouseY, friends=[];
 		
 		function show_me() {
 			FB.api('/me/picture', function(response) {
 				// console.log(response.data.url);
 				me = new createjs.Bitmap(response.data.url);
-	            me.x = _.random(0, canvas.width-100);
-	            me.y = _.random(0, canvas.height-100);
+	            me.x = _.random(0, canvas.width-50);
+	            me.y = _.random(0, canvas.height-50);
 	            stage.addChild(me);
-
-	            _.max([], function(distance){
-	                    max_distance = distance;
-	            });
 			});
 		}
 
 		function show_friends(){
 			FB.api('/me/friends', function(response) {
-				// console.log(response);
 				var _friends = response.data;
 				for (i in _friends) {
 					var x = _.random(0, canvas.width - 0);
@@ -76,7 +71,6 @@
             stage = new createjs.Stage(canvas);
             canvas.width = window.innerWidth-20;
 		    canvas.height = window.outerHeight-150;
-			// console.log(window);
 		    stage.addEventListener("stagemousemove", function(evt) {
 		        mouseX = evt.stageX;
 		        mouseY = evt.stageY;
@@ -89,7 +83,7 @@
 		function tick(event) {
 			_.each(friends, function(friend) {
 				if(!friend.near(mouseX, mouseY))
-					friend.arround(me.x, me.y, max_distance - 100);
+					friend.arround(me.x, me.y);
 			});
 			stage.update(event);
     	}
